istio/nginx-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-istio
  labels:
    istio-injection: enabled
