istio/nginx-clusterip.yaml
# nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-istio-service
  namespace: nginx-istio
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
