istio/nginx-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - nginx-itsio.kube.ancored.ru
    - nginx-istio-service.nginx-istio.svc.cluster.local
